; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/netmap/extr_netmap_freebsd.c_nm_os_kctx_worker_stop.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/netmap/extr_netmap_freebsd.c_nm_os_kctx_worker_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nm_kctx = type { i32*, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nm_os_kctx_worker_stop(%struct.nm_kctx* %0) #0 {
  %2 = alloca %struct.nm_kctx*, align 8
  store %struct.nm_kctx* %0, %struct.nm_kctx** %2, align 8
  %3 = load %struct.nm_kctx*, %struct.nm_kctx** %2, align 8
  %4 = getelementptr inbounds %struct.nm_kctx, %struct.nm_kctx* %3, i32 0, i32 0
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  br label %17

8:                                                ; preds = %1
  %9 = load %struct.nm_kctx*, %struct.nm_kctx** %2, align 8
  %10 = getelementptr inbounds %struct.nm_kctx, %struct.nm_kctx* %9, i32 0, i32 1
  store i64 0, i64* %10, align 8
  %11 = load %struct.nm_kctx*, %struct.nm_kctx** %2, align 8
  %12 = getelementptr inbounds %struct.nm_kctx, %struct.nm_kctx* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = call i32 @kthread_resume(i32* %13)
  %15 = load %struct.nm_kctx*, %struct.nm_kctx** %2, align 8
  %16 = getelementptr inbounds %struct.nm_kctx, %struct.nm_kctx* %15, i32 0, i32 0
  store i32* null, i32** %16, align 8
  br label %17

17:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @kthread_resume(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
